[gd_scene load_steps=2 format=2]

[ext_resource path="res://components/ActionIndicationArea.gd" type="Script" id=1]

[node name="ActionIndicationArea" type="Area2D"]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_ActionIndicationArea_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_ActionIndicationArea_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ActionIndicationArea_mouse_exited"]
